--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,6 +4,19 @@
     min-height: 100vh;
     display: flex;
     background-image: url("./background.jpg");
-    background-size: cover;
     background-position: center;
+    background-size: cover;
+}
+
+::-webkit-scrollbar {
+    width: 0px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgba(136, 136, 136, 0.281);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
