--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap");
 
 .App {
+    padding-top: 90px;
     min-height: 100vh;
     display: flex;
     background-image: url("./background.jpg");
