--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,7 +4,7 @@
     padding-top: 90px;
     min-height: 100vh;
     display: flex;
-    background-image: url("./background.jpg");
+    /* background-image: url("./background.jpg"); */
     background-position: center;
     background-size: cover;
 }
